Fin sección 10 - Auth

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=3000
 DB_CNN=mongodb+srv://mean_user:Odu4NVFwFlzQNLUt@cluster0.j9kzz.mongodb.net/hospitaldb
+JWT_SECRET=tokenUltrasecretoYcriminal1029384756@xdkcreizixd
